--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,74 +1,84 @@
 {
-    "env":{
-       "browser":true,
-       "es2021":true
-    },
-    "extends":[
-       "plugin:react/recommended",
-       "airbnb",
-       "plugin:@typescript-eslint/recommended"
-    ],
-    "parser":"@typescript-eslint/parser",
-    "parserOptions":{
-       "ecmaFeatures":{
-          "jsx":true
-       },
-       "ecmaVersion":12,
-       "sourceType":"module"
-    },
-    "plugins":[
-       "react",
-       "@typescript-eslint",
-       "react-hooks"
-    ],
-    "rules":{
-       "no-use-before-define":"off",
-       "@typescript-eslint/no-use-before-define":[
-          "error"
-       ],
-       "react/react-in-jsx-scope": "off",
-       "react/jsx-filename-extension":[
-          "warn",
-          {
-             "extensions":[
-                ".tsx"
-             ]
-          }
-       ],
-       "import/extensions":[
-          "error",
-          "ignorePackages",
-          {
-             "ts":"never",
-             "tsx":"never"
-          }
-       ],
-       "no-shadow":"off",
-       "@typescript-eslint/no-shadow":[
-          "error"
-       ],
-       "@typescript-eslint/explicit-function-return-type":[
-          "error",
-          {
-             "allowExpressions":true
-          }
-       ],
-       "max-len":[
-          "warn",
-          {
-             "code":80
-          }
-       ],
-       "react-hooks/rules-of-hooks":"error",
-       "react-hooks/exhaustive-deps":"warn",
-       "import/prefer-default-export":"off",
-       "react/prop-types":"off"
-    },
-    "settings":{
-       "import/resolver":{
-          "typescript":{
-             
-          }
-       }
-    }
+   "env":{
+      "browser":true,
+      "es2021":true
+   },
+   "extends":[
+      "plugin:react/recommended",
+      "airbnb",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:prettier/recommended"
+   ],
+   "parser":"@typescript-eslint/parser",
+   "parserOptions":{
+      "ecmaFeatures":{
+         "jsx":true
+      },
+      "ecmaVersion":12,
+      "sourceType":"module"
+   },
+   "plugins":[
+      "react",
+      "@typescript-eslint",
+      "react-hooks",
+      "prettier"
+   ],
+   "rules":{
+      "prettier/prettier": [
+         "error",
+         {
+            "usePrettierrc": true
+         }
+      ],
+      "no-use-before-define":"off",
+      "@typescript-eslint/no-use-before-define":[
+         "error"
+      ],
+      "react/jsx-props-no-spreading": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/jsx-filename-extension":[
+         "warn",
+         {
+            "extensions":[
+               ".tsx"
+            ]
+         }
+      ],
+      "import/extensions":[
+         "error",
+         "ignorePackages",
+         {
+            "ts":"never",
+            "tsx":"never"
+         }
+      ],
+      "no-shadow":"off",
+      "@typescript-eslint/no-shadow":[
+         "error"
+      ],
+      "@typescript-eslint/explicit-function-return-type":[
+         "error",
+         {
+            "allowExpressions":true
+         }
+      ],
+      "max-len":[
+         "error",
+         {
+            "code":80
+         }
+      ],
+      "react-hooks/rules-of-hooks":"error",
+      "react-hooks/exhaustive-deps":"warn",
+      "import/prefer-default-export":"off",
+      "react/prop-types":"off",
+      "object-curly-newline": "off"
+   },
+   "settings":{
+      "import/resolver":{
+         "typescript":{
+            
+         }
+      }
+   }
 }
