--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,9 @@
 {
     "trailingComma": "es5",
     "tabWidth": 2,
-    "semi": false,
-    "singleQuote": true
+    "semi": true,
+    "printWidth": 80,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "endOfLine": "auto"
 }
