feat: add RegisterUserService

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,8 @@
       "import/prefer-default-export":"off",
       "react/prop-types":"off",
       "object-curly-newline": "off",
-      "@typescript-eslint/no-explicit-any": "off"
+      "@typescript-eslint/no-explicit-any": "off",
+      "import/no-extraneous-dependencies": "off"
    },
    "settings":{
       "import/resolver":{
