--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,6 +70,7 @@
       ],
       "react-hooks/rules-of-hooks":"error",
       "react-hooks/exhaustive-deps":"off",
+      "no-param-reassign": "off",
       "import/prefer-default-export":"off",
       "react/prop-types":"off",
       "react/require-default-props": "off",
